grafico de guias

--- a/sextoTrimestre/proyecto/src/app/components/sergio/fichas-instructores/fichas-instructores.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/fichas-instructores/fichas-instructores.component.html
@@ -12,8 +12,14 @@
     <div class="chart" id="bar-chart"></div>
   </div>
 
-  <div class="container">
+  <div class="graficoTres">
+    <h2 class="titulos">Cantidad de Blogs</h2>
     <div id="blogsPorInstructorChart" class="chart-container"></div>
+  </div>
+
+  <div class="graficoCuatro">
+    <h2 class="titulos">Cantidad de Guías</h2>
+    <div id="guiasPorInstructorChart" class="chart-container"></div>
   </div>
 
 </div>
