--- a/sextoTrimestre/proyecto/src/app/components/sergio/fichas-instructores/fichas-instructores.component.scss
+++ b/sextoTrimestre/proyecto/src/app/components/sergio/fichas-instructores/fichas-instructores.component.scss
@@ -19,6 +19,12 @@ body {
   width: 48%;
 }
 
+.graficoTres,
+.graficoCuatro {
+  text-align: center;
+  width: 50%;
+}
+
 .chart {
   border: 1px solid #ddd;
   border-radius: 8px;
