--- a/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.css
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.css
@@ -139,6 +139,14 @@ h2 {
   margin-bottom: 20px;
 }
 
+.container h2{
+    color: #008a88;
+    font-size: 30px;
+    text-align:center;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
 .form-group {
   margin-bottom: 20px;
 }
