--- a/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/marlon/blog/blog.component.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+
 <nav class="navbar">
   <div class="container-fluid">
     <a class="nav-link nombre" >Acanner</a>
@@ -35,30 +36,35 @@
                   <a class="nav-link otro" (click)="logout()">Cerrar Sesión</a>
                 </li>
               </div>
-            </div> 
+            </div>
         </ul>
   </div>
-</nav> 
+</nav>
+
+<!-- CREAR BLOG -->
+
 <div class="container">
   <h2>Crear Blog</h2>
   <form (ngSubmit)="crearBlog()" #blogForm="ngForm">
     <div>
-      <label for="fichaSelect">Seleccionar ficha*:</label>
+      <label for="fichaSelect">Seleccionar ficha: </label>
       <select id="fichaSelect" [(ngModel)]="selectedFicha" (change)="onSelectFicha($event)" name="fichaSelect">
         <option *ngFor="let ficha of fichas" [value]="ficha.identificador">{{ ficha.numeroFicha }}</option>
       </select>
-    </div><br>  
+    </div><br>
     <div class="form-group">
-      <label for="titulo">Título*:</label>
+      <label for="titulo">Título:</label>
       <input type="text" class="form-control" id="titulo" name="titulo" [(ngModel)]="newBlog.nombre" required>
     </div>
     <div class="form-group">
-      <label for="comentario">Comentario*:</label>
+      <label for="comentario">Comentario: </label>
       <textarea class="form-control" id="comentario" name="comentario" [(ngModel)]="newBlog.comentario" required></textarea>
     </div>
-    <button type="submit" class="btn btn-primary">Crear Blog</button>
   </form>
+  <button type="submit" class="boton">Crear Blog</button>
 </div>
+
+
 
 <div class="mostrar">
   <h2>Lista de Blogs</h2>
@@ -72,9 +78,13 @@
             <p class="card-text">{{ blog.comentario }}</p>
             <p class="card-date">{{ blog.fechaPublicacion | date:'dd/MM/yyyy' }}</p>
             <div class="button-container">
-              <button class="btn btn-link" (click)="editBlog(blog)">Editar</button>
+              <button class="Btn" (click)="editBlog(blog)">Editar
+                <svg class="svg" viewBox="0 0 512 512">
+                  <path d="M410.3 231l11.3-11.3-33.9-33.9-62.1-62.1L291.7 89.8l-11.3 11.3-22.6 22.6L58.6 322.9c-10.4 10.4-18 23.3-22.2 37.4L1 480.7c-2.5 8.4-.2 17.5 6.1 23.7s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L387.7 253.7 410.3 231zM160 399.4l-9.1 22.7c-4 3.1-8.5 5.4-13.3 6.9L59.4 452l23-78.1c1.4-4.9 3.8-9.4 6.9-13.3l22.7-9.1v32c0 8.8 7.2 16 16 16h32zM362.7 18.7L348.3 33.2 325.7 55.8 314.3 67.1l33.9 33.9 62.1 62.1 33.9 33.9 11.3-11.3 22.6-22.6 14.5-14.5c25-25 25-65.5 0-90.5L453.3 18.7c-25-25-65.5-25-90.5 0zm-47.4 168l-144 144c-6.2 6.2-16.4 6.2-22.6 0s-6.2-16.4 0-22.6l144-144c6.2-6.2 16.4-6.2 22.6 0s6.2 16.4 0 22.6z"></path></svg>
+              </button>
               <button class="btn-cancelar" (click)="deleteBlog(blog.identificador)">Eliminar</button>
-            </div><br>                      
+
+            </div><br>
             <div *ngIf="editingBlog && editingBlog.identificador === blog.identificador">
               <form (ngSubmit)="updateBlog()" #editBlogForm="ngForm">
                 <div class="form-group">
