--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-blog/ver-blog.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-blog/ver-blog.component.html
@@ -42,11 +42,19 @@
 
 <h2 class="subtitulo mt-5">Noticias</h2>
 
-<div class="noticias-container">
-  <div *ngFor="let blog of newsList" class="instagram-div">
-    <p class="date" style="font-size: 12px;">{{ blog.fechaPublicacion | date:'dd/MM/yyyy' }}</p>
-    <h1 class="titulo">{{ blog.nombre }}</h1>
-    <img src="assets/imagenes/Blog.png" class="card-img-top" alt="imagen">
-    <p class="card-text"><strong>Descripción:</strong> {{ blog.comentario }}</p>
+<div>
+  <h2>Blogs</h2>
+  <div *ngFor="let blog of blogs">
+    <h3>Titulo {{ blog.nombre }}</h3>
+    <p>Comentario {{ blog.comentario }}</p>
+    <p>Publicado por: {{ blog.primerNombre }} {{ blog.primerApellido }}</p>
+    <p>Fecha de Publicación: {{ blog.fechaPublicacion | date: 'dd/MM/yyyy' }}</p>
+    <img *ngIf="blog.urlImagen" [src]="blog.urlImagen" alt="Imagen del Blog" />
   </div>
+</div>
+
+
+
+<div *ngIf="!userInfo || !blogs">
+  <p>Cargando información...</p>
 </div>
