--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-blog/ver-blog.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-blog/ver-blog.component.html
@@ -40,13 +40,27 @@
   </div>
 </nav>
 
-<h2 class="subtitulo mt-5">Noticias</h2>
+<h2 class="subtitulo mt-5">Blogs</h2>
 
-<div class="noticias-container">
-  <div *ngFor="let blog of newsList" class="instagram-div">
+<!-- <div class="noticias-container">
+  <div *ngFor="let blog of blogs" class="instagram-div">
     <p class="date" style="font-size: 12px;">{{ blog.fechaPublicacion | date:'dd/MM/yyyy' }}</p>
     <h1 class="titulo">{{ blog.nombre }}</h1>
     <img src="assets/imagenes/Blog.png" class="card-img-top" alt="imagen">
     <p class="card-text"><strong>Descripción:</strong> {{ blog.comentario }}</p>
   </div>
+</div> -->
+<div class="noticias-container">
+  <div *ngFor="let blog of blogs" class="instagram-div">
+    <h3 class="titulo">Titulo {{ blog.nombre }}</h3>
+    <p class="date" style="font-size: 12px;">Fecha de Publicación: {{ blog.fechaPublicacion | date:'dd/MM/yyyy' }}</p>
+    <p class="card-text"><strong>Comentario:</strong> {{ blog.comentario }}</p>
+    <img src="assets/imagenes/Blog.png" alt="imagen">
+    <p class="card-text"><strong>Publicado por:</strong>{{ blog.primerNombre }} {{ blog.primerApellido }}</p>
+  </div>
+</div>
+
+
+<div *ngIf="!userInfo || !blogs">
+  <p>Cargando información...</p>
 </div>
