--- a/sextoTrimestre/proyecto/src/app/components/katalina/ver-blog/ver-blog.component.html
+++ b/sextoTrimestre/proyecto/src/app/components/katalina/ver-blog/ver-blog.component.html
@@ -40,16 +40,8 @@
   </div>
 </nav>
 
-<h2 class="subtitulo mt-5">Blogs</h2>
+<h2 class="titulo2">Blogs</h2>
 
-<!-- <div class="noticias-container">
-  <div *ngFor="let blog of blogs" class="instagram-div">
-    <p class="date" style="font-size: 12px;">{{ blog.fechaPublicacion | date:'dd/MM/yyyy' }}</p>
-    <h1 class="titulo">{{ blog.nombre }}</h1>
-    <img src="assets/imagenes/Blog.png" class="card-img-top" alt="imagen">
-    <p class="card-text"><strong>Descripción:</strong> {{ blog.comentario }}</p>
-  </div>
-</div> -->
 <div class="noticias-container">
   <div *ngFor="let blog of blogs" class="instagram-div">
     <h3 class="titulo">Titulo {{ blog.nombre }}</h3>
